# quickhull-cmake

./: .gitignore  CMakeLists.txt
cmake/: quickhullConfig.cmake.in
